fix: Mobile Links Fixed + Webpack Migration Attempted (Not Working) + Shifted Fonts & Models to Static + Refined Orbit Controls & Window Resizing

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-@import url('./fonts/blender-bold/style.css');
+@import url('./static/fonts/blender-bold/style.css');
 /* @import url('./fonts/blender-book/style.css'); */
 @font-face {
   font-family: 'Blender Pro' !important; /* Define the custom font name */
-  src: url('./fonts/blender-bold/BlenderPro-Bold.woff2') format('woff2'),
-    url('./fonts/blender-book/BlenderPro-Book.woff') format('woff'); /* Define where the font can be downloaded */
+  src: url('./static/fonts/blender-bold/BlenderPro-Bold.woff2') format('woff2'),
+    url('./static/fonts/blender-book/BlenderPro-Book.woff') format('woff'); /* Define where the font can be downloaded */
   font-display: fallback; /* Define how the browser behaves during download */
 }
 /* html {
@@ -25,8 +25,8 @@
 #cd201f */
 
 body {
-  color: #fff;
-  background-color: transparent;
+  background-color: #000;
+  /* background-color: transparent; */
   font-family: 'Blender Pro' !important;
   font-weight: 700;
   font-feature-settings: 'zero';
@@ -48,9 +48,11 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   will-change: transform;
+  z-index: 11;
+}
+#app {
   z-index: 20;
 }
-
 section:nth-child(odd) {
   justify-content: flex-end;
 }
@@ -96,7 +98,8 @@ section:nth-child(odd) {
   padding: 0 1.5rem;
   display: flex;
   justify-content: space-between;
-  z-index: 21;
+  align-items: center;
+  z-index: 11;
 }
 
 .icon-item {
@@ -139,12 +142,12 @@ canvas {
   position: fixed !important;
   top: 0;
   left: 0;
-  scroll-behavior: smooth;
-  touch-action: scroll;
+  touch-action: auto;
   z-index: -5;
 }
 /* Media Query Affected Classes */
 .hero-title {
+  color: #fff;
   display: inline-block;
   font-size: 48px;
   margin-bottom: 3rem;
@@ -152,6 +155,7 @@ canvas {
   opacity: 0;
 }
 .hero-subtitle {
+  color: #fff;
   display: inline-block;
   font-size: 20px;
   margin-bottom: 3rem;
@@ -172,7 +176,7 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 22;
 }
 
 .icon-link {
@@ -184,7 +188,7 @@ canvas {
   height: 6rem;
   transition: 0.5s linear;
   position: relative;
-  z-index: 23;
+  z-index: 12;
   margin: auto;
 }
 
@@ -205,6 +209,13 @@ canvas {
   transition: 0.3s cubic-bezier(0.95, 0.32, 0.37, 1.21);
 }
 @media screen and (min-width: 500px) {
+  canvas {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    touch-action: auto;
+    z-index: -5;
+  }
   .hero-title {
     font-size: 65px;
     margin-bottom: 0rem;
@@ -221,10 +232,17 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 21;
+    z-index: 22;
   }
 }
 @media screen and (min-width: 769px) {
+  canvas {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    touch-action: auto;
+    z-index: -5;
+  }
   .icon-link::before {
     position: absolute;
     margin-top: 0rem;
@@ -252,7 +270,7 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 21;
+    z-index: 22;
   }
   .hero-title {
     font-size: 75px;
